--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
+# dependencies
 node_modules
 package-lock.json
 keys_dev.js
+/.pnp
+.pnp.js
+
+# production
 /build
 
+# misc
 .DS_Store
 .env.local
 .env.development.local
@@ -12,3 +18,9 @@ keys_dev.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# vscode
+.vscode
+
+# testing
+/coverage
